--- a/config.json
+++ b/config.json
@@ -1,9 +1,6 @@
 {
-  "country_code": "de",
-  "device_family": "iphone_12_mini",
-  "zip_code": "10369",
-  "models": ["MGJ53ZD/A"],
-  "carriers": ["TMOBILE/US", "SPRINT/US", "ATT/US"],
-  "stores": ["R462"],
-  "appointment_stores": ["R358", "R462"]
+  "country_code": "fr",
+  "zip_code": "69001",
+  "models": ["MKMQ3NF/A"],
+  "stores": ["R469", "R373"]
 }
